objects/AR_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>&apos;Please enter duration of the assignment&apos;</inlineHelpText>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25 days</fullName>
                </value>
                <value>
                    <fullName>30 days</fullName>
                </value>
                <value>
                    <fullName>40 days</fullName>
                </value>
                <value>
                    <fullName>45 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                    <default>true</default>
                    <label>India</label>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AR Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AR Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Assignments</pluralLabel>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Autorabit internal assignment</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>